--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>etch-a-sketch</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <script src="./index.js" async defer></script>
+        <div id="side-pane">
+            <h1 id="title">ETCH-A-SKETCH</h1>
+        </div>
+        <div id="container">
+            
+        </div>
     </body>
 </html>
