--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
     </head>
     <body>
         <script src="./index.js" async defer></script>
-        <div id="side-pane">
-            <h1 id="title">ETCH-A-SKETCH</h1>
-        </div>
-        <div id="container">
-            
-        </div>
+        <header><h1 id="title">ETCH-A-SKETCH</h1></header>    
+        <main>    
+            <div id="side-pane">
+                <button type="button" id="color">Color</button>
+                <button type="button"id="rainbow">Rainbow</button>
+                <button type="button" id="shade">Shade</button>
+                <button type="button" id="clear">Clear</button>
+            </div>
+            <div id="container">            
+            </div>
+        </main>
+        <footer>
+            <h2>Rafael Gutierrez</h2>
+        </footer>
     </body>
 </html>
