--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
-        <script src="./index.js" async defer></script>
         <header><h1 id="title">ETCH-A-SKETCH</h1></header>    
         <main>    
             <div id="side-pane">
+                <input type="color" id="colorPicker" value="#ffffff">
                 <button type="button" id="color">Color</button>
                 <button type="button"id="rainbow">Rainbow</button>
                 <button type="button" id="shade">Shade</button>
                 <button type="button" id="clear">Clear</button>
+                <div id="id" class="size">16 x 16</div>
+                <input type="text" type="range" value ="16" min="16" max="64" id="slider">
             </div>
             <div id="container">            
             </div>
         </main>
         <footer>
-            <h2>Rafael Gutierrez</h2>
+            <p id="footer"></p>
         </footer>
+        <script src="./index.js" async defer></script>
     </body>
 </html>
