--- a/index.html
+++ b/index.html
@@ -10,24 +10,33 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/ddd1b8f954.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header><h1 id="title">ETCH-A-SKETCH</h1></header>    
         <main>    
             <div id="side-pane">
-                <input type="color" id="colorPicker" value="#ffffff">
+                <input type="color" id="colorPicker" value="#000000">
                 <button type="button" id="color">Color</button>
                 <button type="button"id="rainbow">Rainbow</button>
                 <button type="button" id="shade">Shade</button>
                 <button type="button" id="clear">Clear</button>
                 <div id="id" class="size">16 x 16</div>
-                <input type="text" type="range" value ="16" min="16" max="64" id="slider">
+                <input type="range" type="range" value ="16" min="16" max="64" id="slider">
             </div>
             <div id="container">            
             </div>
         </main>
         <footer>
-            <p id="footer"></p>
+            <p id="footer">©
+                <script>
+                     document.write(new Date().getFullYear())
+                </script>
+                regutierrez
+            </p>
+            <a href="https://github.com/regutierrez" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
         </footer>
         <script src="./index.js" async defer></script>
     </body>
