fix: fix slider functions

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <button type="button"id="rainbow">Rainbow</button>
                 <button type="button" id="shade">Shade</button>
                 <button type="button" id="clear">Clear</button>
-                <div id="id" class="size">16 x 16</div>
-                <input type="range" type="range" value ="16" min="16" max="64" id="slider">
+                <div id="size">16 x 16</div>
+                <input type="range" value ="16" min="16" max="64" id="slider">
             </div>
             <div id="container">            
             </div>
