--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -20,6 +21,7 @@
                 <button type="button" id="color">Color</button>
                 <button type="button"id="rainbow">Rainbow</button>
                 <button type="button" id="shade">Shade</button>
+                <button type="button" id="eraser">Eraser</button>
                 <button type="button" id="clear">Clear</button>
                 <div id="size">16 x 16</div>
                 <input type="range" autocomplete="off" value ="16" min="16" max="100" id="slider">
