fix: fix shade functionality; used a different way to add a property to the DOM

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>etch-a-sketch</title>
+        <title>SKETCHER</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
@@ -14,7 +14,7 @@
         <script src="https://kit.fontawesome.com/ddd1b8f954.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header><h1 id="title">ETCH-A-SKETCH</h1></header>    
+        <header><h1 id="title">SKETCHER</h1></header>    
         <main>    
             <div id="side-pane">
                 <input type="color" id="colorPicker" value="#000000">
